--- a/index.html
+++ b/index.html
@@ -3,11 +3,25 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="style.css">
 	<title>Aveline Cacciatore</title>
 </head>
 <body>
-	<h1>Avy</h1>
-	<p>I love my wife</p>
+	<header>
+		
+	</header>
+
+	<div id="div-first-section">
+		<div id="first-section-welcome">
+			<div id="first-section-text">
+				<h1>AVELINE CACCIATORE</h1>
+				<p>Developer // Computer Science Student</p>
+			</div>
+			<div id="first-section-picture">
+				
+			</div>
+		</div>
+	</div>
 
 </body>
 </html>
