--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 		
 	</header>
 
-	<div id="div-first-section">
+	<div id="first-section">
 		<div id="first-section-welcome">
-			<div id="first-section-text">
+			<div id="container-welcome-text">
 				<h1>AVELINE CACCIATORE</h1>
 				<p>Developer // Computer Science Student</p>
 			</div>
-			<div id="first-section-picture">
-				
+			<div id="container-welcome-picture">
+				<img id="welcome-picture" src="./assets/photo.png">
 			</div>
 		</div>
 	</div>
